erDiagram
  SOURCE_DATASET ||--o{ EXTRACTION_RUN : records
  DEPARTMENT ||--o{ MUNICIPALITY : contains
  DEPARTMENT ||--o{ PUBLIC_ENTITY : locates
  MUNICIPALITY ||--o{ PUBLIC_ENTITY : locates
  PUBLIC_ENTITY ||--o{ PROCUREMENT_PROCESS : publishes
  PROVIDER ||--o{ CONTRACT : receives
  MODALITY ||--o{ PROCUREMENT_PROCESS : classifies
  CONTRACT_TYPE ||--o{ PROCUREMENT_PROCESS : classifies
  UNSPSC_CATEGORY ||--o{ PROCUREMENT_PROCESS : classifies
  PROCUREMENT_PROCESS ||--o{ PROCESS_STATE_HISTORY : tracks
  PROCUREMENT_PROCESS ||--o{ CONTRACT : has
  PUBLIC_ENTITY ||--o{ ANNUAL_PROCUREMENT_PLAN : owns
  ANNUAL_PROCUREMENT_PLAN ||--o{ PAA_ITEM : contains
  PAA_ITEM ||--o{ PAA_PROCESS_MATCH : matches
  PROCUREMENT_PROCESS ||--o{ PAA_PROCESS_MATCH : matches
  PUBLIC_ENTITY ||--o{ FISCAL_CONTROL_SUBJECT : contextualizes
  FISCAL_CONTROL_SUBJECT ||--o{ FISCAL_FINDING : has
  PROCUREMENT_PROCESS ||--o{ RISK_ASSESSMENT : receives
  RISK_ASSESSMENT ||--o{ RISK_REASON : explains
  RISK_RULE ||--o{ RISK_REASON : contributes
  PROCUREMENT_PROCESS ||--o{ SEMANTIC_COMPARABLE : source
  APP_USER ||--o{ USABILITY_SURVEY_RESPONSE : submits
